Agrege formulario para la clase 7

--- a/index.html
+++ b/index.html
@@ -17,5 +17,20 @@
         <li>Los girasoles</li>
         <li>La habitación en Arles</li>
     </ul>
+    <h2>Participar en la subasta</h2>
+    <form action="formulario pago">
+        <label for="postor">Nombre del postor</label>
+        <input type="text" id = "postor" name = "postor">
+        <label for="nombreO">Nombre de la obra</label>
+        <input type="text" id = "nombreO" name="nombreO">
+        <label for="year">Año de creación</label>
+        <input type="date" name="fecha" id="fecha">
+        <label for="estilo">Estilo de la obra</label>
+        <input type="text" ic = "estilo" name = "estilo">
+        <label for="valor">Valor en dolares</label>
+        <input type="number" name="valor" id="valor">
+        <label for=""></label>
+        <button type="submit">Hacer oferta</button>
+    </form>
 </body>
 </html>
