Complemento de información, biografia y obras

--- a/index.html
+++ b/index.html
@@ -6,27 +6,45 @@
     <title>La Noche Estrellada DEV.F</title>
 </head>
 <body>
-    <h1>La Noche Estrellada</h1>
-    <p>Es una de las obras más famosas del pintor Vincent van Gogh. Pintada en 1889</p>
-    <p>Fue pintada mientras van Gogh estaba internado en el asilo de Saint-Rémy-de-Provence, en Francia,</p>
-    <p>la obra muestra una vista imaginada desde la ventana de su habitación antes del amanecer, con la adición de una aldea ficticia.</p>
-    <img src="https://th.bing.com/th/id/R.f80f22e4c4e4d3c08f65b00dab7ba319?rik=tCuIsyX9sj9ycw&riu=http%3a%2f%2fwww.recreoviral.com%2fwp-content%2fuploads%2f2016%2f02%2fVAN-GOGH-3.jpg&ehk=9%2btNCQ41w%2fGBOpOhRXgF19jV6Z4xqFcAjhQ4lD9m6Ac%3d&risl=&pid=ImgRaw&r=0" alt="imagen de la noche estrellada" width="300" height="200">
-    <h2>Obras más famosas de van Gogh:</h2>
-    <ul>
-        <li>La noche estrellada</li>
-        <li>Los girasoles</li>
-        <li>La habitación en Arles</li>
-    </ul>
+    <header>
+        <h1>El mundo de Vicente van Gogh</h1>
+        <h2>Descucbre la vida y obras de uno
+             de los 
+            genios del arte postimpresionista</h2>
+        <img src="./1.jpg" alt="retrato" width="200">
+    </header>
+    <h2>¿Quién fue Vicente van Gogh?</h2>
+    <p>Nacio el 30 de marzo de 1853, en los Países Bajos,</p>
+    <p>pintó más de 2,100 obras, incluyendo 860 pinturas al óleo,</p>
+    <p>tuvo una vida marcada por la lucha con enfermedades mentales</p>
+    <p>y episodios de pobreza, apesar de que no fue reconocido en vida</p>
+    <p>su influencia en el arte es inmensa.</p>
+    <h2>Obras destacadas</h2>
+    <h3>La noche estrallada</h3>
+    <p>Pintada en 1889, una vista imaginativa desde </p>
+    <p>su habitación en el asilo de Saint-Rémy.</p>
+    <img src="./ne.jpg" alt="imagen de la noche estrellada" width="300">
+    <h3>Los girasoles</h3>
+    <p>Serie de pinturas que celebran la naturalez</p>
+    <p>fueron pintados entre 1888 y 1889</p>
+    <img src="./gi.jpg" alt="los girasoles" width="200">
+    <h3>Autorretratos</h3>
+    <p>Un reflejo de sus estados emocionales a través del tiempo</p>
+    <img src="./auto.jpg" alt="autorretrato" width="200">
+    <h2>Palabras de un artista</h2>
+    <p>"Encuentro en mi trabajo un consuelo infinito,</p>
+    <p>un consuelo en la idea de que, si uno avanza</p>
+    <p>con pasión en lo que es justo, quizás uno logre</p>
+    <p>algo bueno algún día."</p>
+    <p>(Carta a Theo, julio de 1882)</p>
+    <p>"El arte es para consolar a aquellos que están quebrados por la vida."</p>
+    <p>"¿Qué sería de la vida si no tuviéramos el coraje de intentar algo?"</p>
     <h2>Participar en la subasta</h2>
     <form action="formulario pago">
         <label for="postor">Nombre del postor</label>
         <input type="text" id = "postor" name = "postor">
         <label for="nombreO">Nombre de la obra</label>
         <input type="text" id = "nombreO" name="nombreO">
-        <label for="year">Año de creación</label>
-        <input type="date" name="fecha" id="fecha">
-        <label for="estilo">Estilo de la obra</label>
-        <input type="text" ic = "estilo" name = "estilo">
         <label for="valor">Valor en dolares</label>
         <input type="number" name="valor" id="valor">
         <label for=""></label>
