Agrege enlces en biografía y obras

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>pintó más de 2,100 obras, incluyendo 860 pinturas al óleo,</p>
     <p>tuvo una vida marcada por la lucha con enfermedades mentales</p>
     <p>y episodios de pobreza, apesar de que no fue reconocido en vida</p>
-    <p>su influencia en el arte es inmensa.</p>
+    <p>su influencia en el arte es inmensa. <a href="https://www.biografiasyvidas.com/biografia/g/gogh.htm">Conoce más</a></p>
     <h2>Obras destacadas</h2>
     <h3>La noche estrallada</h3>
     <p>Pintada en 1889, una vista imaginativa desde </p>
@@ -31,6 +31,8 @@
     <h3>Autorretratos</h3>
     <p>Un reflejo de sus estados emocionales a través del tiempo</p>
     <img src="./auto.jpg" alt="autorretrato" width="200">
+    <p> </p>
+    <a href="https://www.elle.com/es/living/ocio-cultura/g39372129/van-gogh-cuadros-mas-famosos/">Más de sus obras</a>
     <h2>Palabras de un artista</h2>
     <p>"Encuentro en mi trabajo un consuelo infinito,</p>
     <p>un consuelo en la idea de que, si uno avanza</p>
@@ -42,12 +44,11 @@
     <h2>Participar en la subasta</h2>
     <form action="formulario pago">
         <label for="postor">Nombre del postor</label>
-        <input type="text" id = "postor" name = "postor">
+        <input type="text" id = "postor" name = "postor"><br><br>
         <label for="nombreO">Nombre de la obra</label>
-        <input type="text" id = "nombreO" name="nombreO">
+        <input type="text" id = "nombreO" name="nombreO"><br><br>
         <label for="valor">Valor en dolares</label>
-        <input type="number" name="valor" id="valor">
-        <label for=""></label>
+        <input type="number" name="valor" id="valor"><br><br>
         <button type="submit">Hacer oferta</button>
     </form>
 </body>
